--- a/a.css
+++ b/a.css
@@ -1,3 +1,1 @@
-body {font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; margin: 40px 20px; padding: 0;}
-#bd {margin: 0 auto; width: 720px;}
-p {line-height: 1.6; margin-bottom: 20px;}
+body{font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;margin:40px 20px;padding:0}#bd{margin:0 auto;width:720px}p{line-height:1.6;margin-bottom:20px}
