--- a/a.css
+++ b/a.css
@@ -1,13 +1,7 @@
-body {font: 15px arial, sans-serif; margin: 48px 12px;}
-img {border: 0;}
-a {color: #333;}
-#hd {margin: 0 auto 48px auto; position: relative; width: 960px;}
-#bd {background: orange; margin: 0 auto; width: 720px;}
-#nv {margin: 0; position: absolute; top: 0; right: 0; }
-#nv li {float: left; list-style: none;}
-#nv li a {display: block; margin: 15px 12px; text-decoration: none;}
-#nv li a.cta {border: 1px solid #333; border-radius: 5px; margin: 5px 15px 0 15px; padding: 10px 20px;}
-@media (max-width: 980px) {
-    #hd {width: auto;}
-    #bd {width: auto;}
-}
+body {color: #3D3936; margin: 60px 20px; font-family: Arial,sans-serif; font-size: 16px; line-height: 1.6; text-align: center;}
+h1 { font-size: 27px; font-weight: bold; line-height: 1.2; margin: 2em 0px .5em;}
+h2 { font-size: 18px; font-weight: bold; line-height: 1.2; margin-bottom: 1em; margin-top: 3em; text-transform: uppercase; }
+a { color: rgb(87, 173, 104); text-decoration: underline; }
+#wr {margin: 0 auto; text-align: left; max-width: 660px;}
+#nv {color: #999; list-style: none; margin: 12px 0 48px 0; padding: 0;}
+#nv li {display: inline; margin: 0; padding: 0;}
