--- a/a.css
+++ b/a.css
@@ -2,7 +2,7 @@ body {color: #3D3936; margin: 60px 20px; font-family: Arial,sans-serif; font-siz
 a { color: rgb(87, 173, 104); text-decoration: underline; }
 a img {border: none;}
 h1 { font-size: 27px; font-weight: bold; line-height: 1.2;}
-h2 { font-size: 18px; font-weight: bold; line-height: 1.2; padding-bottom: 1em; padding-top: 2em; text-transform: uppercase; }
+h2 { font-size: 18px; font-weight: bold; line-height: 1.2; padding-bottom: .5em; padding-top: 2em; text-transform: uppercase; }
 pre { margin-bottom: 1em; word-break: normal; padding: 16px; overflow: auto; font-size: 85%; line-height: 1.45; background-color: #f7f7f7; border-radius: 3px; white-space: pre-wrap; white-space: -moz-pre-wrap; white-space: -pre-wrap; white-space: -o-pre-wrap; word-wrap: break-word; }
 #wr {margin: 0 auto; text-align: left; width: 720px;}
 .nv {color: #999; list-style: none; margin: 12px 0 48px 0; padding: 0;}
