--- a/a.css
+++ b/a.css
@@ -1,5 +1,5 @@
 body {color: #3D3936; margin: 60px 20px; font-family: Arial,sans-serif; font-size: 16px; line-height: 1.6; text-align: center;}
-a { color: rgb(87, 173, 104); text-decoration: underline; }
+a { color: #005A7B; text-decoration: none; }
 a img {border: none;}
 h1 { font-size: 27px; font-weight: bold; line-height: 1.2;}
 h2 { font-size: 18px; font-weight: bold; line-height: 1.2; padding-bottom: .5em; padding-top: 2em; text-transform: uppercase; }
